tests/custom/STARIS_2022/operation-type-errors/min-type-error-01/stderr.expected
Error:
    min-type-error.essence:2:20:
  |
2 | such that b = (min(4) = 2)
  |                    ^
Type error:
	Expected: "Domain of int-like or matrix of int-like"
	Got: int

